--- a/test.html
+++ b/test.html
@@ -1,14 +1,62 @@
-<!doctype HTML>
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Sharing Page
-        </title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body>
-        <div class="header">
-            Sharing page <button class="logout">log out</button>
+
+<head>
+    <title>
+        Sharing page
+    </title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+    <div class="header">
+        Sharing Page
+    </div>
+    <div class="content">
+        <div class="card">
+            <div class="card_image"></div>
+            <div class="card_footer">
+                <a class="card_link" href="https://frolov.eu">Website</a>
+            </div>
         </div>
-    </body>
+        <div class="card">
+            <div class="card_image"></div>
+            <div class="card_footer">
+                <a class="card_link" href="https://frolov.eu">Website</a>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card_image"></div>
+            <div class="card_footer">
+                <a class="card_link" href="https://frolov.eu">Website</a>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card_image"></div>
+            <div class="card_footer">
+                <a class="card_link" href="https://frolov.eu">Website</a>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card_image"></div>
+            <div class="card_footer">
+                <a class="card_link" href="https://frolov.eu">Website</a>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card_image"></div>
+            <div class="card_footer">
+                <a class="card_link" href="https://frolov.eu">Website</a>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card_image"></div>
+            <div class="card_footer">
+                <a class="card_link" href="https://frolov.eu">Website</a>
+            </div>
+        </div>
+    </div>
+    <div class="footer"></div>
+</body>
+
 </html>
